<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="LiteraryBrown_name">Ochikuri</string>
    <string name="LiteraryCyan_name">Sabiseiji</string>
    <string name="LiteraryGreen_name">Yanagisusutake Cya</string>
    <string name="LiteraryPink_name">Sekichiku</string>
    <string name="LiteraryPurple_name">Hatoba Murasaki</string>
    <string name="LiteraryRed_name">Suoh</string>
    <string name="LiteraryWhite_name">Ensyu Nezumi</string>
    <string name="LiteraryYellow_name">Karekusak</string>
    <string name="about_item_text">About</string>
    <string name="about_ui_share">Share</string>
    <string name="additional_features_text">Additional Features</string>
    <string name="additional_features_sub_text">Display, gestures, and search options</string>
    <string name="transparent_theme_grid_lines_label">Show grid lines in transparent/glass themes</string>
    <string name="transparent_theme_grid_lines_tips">Show cell borders when using transparent or glass themes.</string>
    <string name="dock_slide_reverse_label">Reverse dock swipe direction</string>
    <string name="dock_slide_reverse_tips">Swipe right to enter edit mode and left to exit, reversing the default direction.</string>
    <string name="icon_label_size_label">Icon Label Size</string>
    <string name="icon_label_size_50">50%</string>
    <string name="icon_label_size_100">100%</string>
    <string name="icon_label_size_200">200%</string>
    <string name="hide_dock_label_label">Hide Dock Icon Labels</string>
    <string name="hide_dock_label_tips">Only hides icon labels in the Dock. Desktop icon labels follow the main setting.</string>
    <string name="unlock_animation_compat_label">Unlock Animation Compatibility Mode</string>
    <string name="unlock_animation_compat_tips">Enable only if the unlock animation is missing or abnormal. It may cause duplicate unlock animations on some devices.</string>
    <string name="profile_apps_text">Cloned Apps</string>
    <string name="profile_apps_sub_text">Choose cloned apps shown on the desktop</string>
    <string name="shortcut_apps_text">App Shortcuts</string>
    <string name="shortcut_apps_sub_text">Browse and add shortcuts provided by apps</string>
    <string name="shortcut_apps_search_hint">Search apps</string>
    <string name="shortcut_apps_loading">Loading apps...</string>
    <string name="shortcut_apps_empty">No apps found</string>
    <string name="shortcut_apps_no_search_result">No matching apps</string>
    <string name="shortcut_apps_unsupported">App shortcuts are not supported on this system</string>
    <string name="shortcut_apps_default_launcher_required">Set this launcher as the default home app first</string>
    <string name="shortcut_apps_none">This app does not provide shortcuts</string>
    <string name="shortcut_apps_already_added">This shortcut has already been added</string>
    <string name="shortcut_apps_added">Added to the home screen</string>
    <string name="shortcut_apps_add_failed">Could not add shortcut</string>
    <string name="shortcut_apps_read_failed">Could not read shortcuts from this app</string>
    <string name="shortcut_apps_added_state">Added</string>
    <string name="shortcut_apps_add_action">Add</string>
    <string name="activity_not_found">App Not Installed</string>
    <string name="activity_title_back">Back</string>
    <string name="activity_title_confirm">Confirm</string>
    <string name="app_name">SmartisanOS</string>
    <string name="app_name_app_store">Market</string>
    <string name="app_name_bbs">BBS</string>
    <string name="app_name_calendar">Calendar</string>
    <string name="app_name_game_center">Game Center</string>
    <string name="app_name_mms">Messages</string>
    <string name="app_name_notes">NOTE</string>
    <string name="app_name_phone">Phone</string>
    <string name="app_name_quicksearchbox">Search</string>
    <string name="app_name_reader">Reader</string>
    <string name="app_name_smile_cloud">Smiling Cloud</string>
    <string name="app_name_weather">Weather</string>
    <string name="at_most">Select No More Than %1$s Apps</string>
    <string name="atleast_one_visible">At least one desktop should remain visible</string>
    <string name="can_not_download_theme_by_net">Download failed, Please connect to the network environment</string>
    <string name="cancel">Cancel</string>
    <string name="category_language">en</string>
    <string name="category_other">Miscellaneous</string>
    <string name="confirm_download_app_msg">Do you want to download Smartisan APP \"%s\" ?</string>
    <string name="confirm_sort_by_category_dialog_title_1">Preview: Sort by App Type</string>
    <string name="confirm_sort_by_color_dialog_title">Sort by Color</string>
    <string name="confirm_sort_by_color_dialog_title_1">Preview: Sort by Color</string>
    <string name="confirm_sort_by_install_dialog_title">Sort by Time</string>
    <string name="confirm_sort_by_install_dialog_title_1">Preview: Sort by Time Installed</string>
    <string name="confirm_sort_by_usage_dialog_title">Sort by Frequency</string>
    <string name="confirm_sort_by_usage_dialog_title_1">Preview: Sort by Frequency</string>
    <string name="current_theme_tag">Current</string>
    <string name="current_use">Current</string>
    <string name="default_icon_text">Default Icons</string>
    <string name="delete_area_text">Uninstallation</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_msg_download_theme_local_only">Currently there are only 1 theme, whether to download other themes?</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_switch_launcher_msg">The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_msg_9_grids">When you change the Home Screen from 16 grids to 9 grids, all pages with more than 9 icons (including the hidden page) will be automatically sorted into 2 pages. The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_title">Setting Home Screen</string>
    <string name="download_embedded_app_downlading">%s Downloading</string>
    <string name="download_embedded_app_failed">Download %s Failed</string>
    <string name="download_with_cellular_continue">Continue</string>
    <string name="empty_password">Empty Password</string>
    <string name="enable_cellular_label">Enable Cellular</string>
    <string name="enable_cellular_tips">When Wi-Fi is unavailable, you need a mobile data connection to download Launcher themes or change icons and preset apps.</string>
    <string name="engine_title_baidu">Baidu</string>
    <string name="engine_title_bing">Bing</string>
    <string name="engine_title_google">Google</string>
    <string name="engine_title_sm">Shenma</string>
    <string name="enter_page_title">Enter Title</string>
    <string name="enter_password">Enter password to access protected apps</string>
    <string name="eyelock_notice">Hidden</string>
    <string name="flip_anim_cut_card">Screen Slide</string>
    <string name="flip_anim_default">Default</string>
    <string name="flip_anim_gather">Aggregation</string>
    <string name="flip_anim_grid_flip">Block Flip</string>
    <string name="flip_anim_lattice_flip">Grid Flip</string>
    <string name="flip_anim_lattice_stretch">Grid Stretch</string>
    <string name="flip_anim_shutter">Window Shades</string>
    <string name="flip_anim_subtitle">Pick an animation</string>
    <string name="flip_anim_title">Page Animations</string>
    <string name="follow_dialog_coyp_text">Copy</string>
    <string name="follow_dialog_coyp_toast_text">Text Copied</string>
    <string name="follow_dialog_weibo_title_text">Copy the Weibo account name</string>
    <string name="follow_dialog_weixin_title_text">Copy the Wechat account name</string>
    <string name="follow_website_title">Official Website</string>
    <string name="follow_weibo_content">锤子科技</string>
    <string name="follow_weibo_title">Weibo</string>
    <string name="follow_weixin_title">Wechat Account</string>
    <string name="forget_password">Forget</string>
    <string name="global_search">System-wide Search</string>
    <string name="has_selected_1_app_float">%1$s App Selected</string>
    <string name="has_selected_app_float">%1$s Apps Selected</string>
    <string name="hdd_dialog_body">Sorry, Smartisan Launcher currently supports only part of the resolution of 720P and more than 1GB memory phones,in order to ensure the smooth running effects and a good user experience of it.</string>
    <string name="hdd_dialog_title">Warning</string>
    <string name="hdd_dialog_uninstall_btn">OK</string>
    <string name="icon_setting_empty_tip">No Replaceable Icons</string>
    <string name="icon_setting_sub_text">"Choose well-designed icons to replace apps' default icons"</string>
    <string name="icon_setting_text">Application Icons</string>
    <string name="improved_icon_text">Improved Icons</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="initializing">Initializing</string>
    <string name="hide_navigation_bar_label">Hide Bottom Navigation Bar</string>
    <string name="hide_navigation_bar_tips">Only hides the bottom navigation bar on the home screen. Settings and search pages are not affected.</string>
    <string name="swipe_up_action_tips">Choose what happens when you swipe up with two fingers on an empty area of the home screen.</string>
    <string name="search_default_t9_keyboard_label">Use T9 Keyboard By Default</string>
    <string name="search_default_t9_keyboard_tips">When enabled, search opens with the T9 keyboard first. When disabled, it opens with the system input method.</string>
    <string name="search_usage_sort_label">Sort Search Results By Usage</string>
    <string name="search_usage_sort_tips">When enabled, app search results put frequently used apps first.</string>
    <string name="search_recent_apps_label">Show Recently Used Apps</string>
    <string name="search_recent_apps_tips">When enabled, opening Search without keywords shows recently used apps.</string>
    <string name="search_contacts_label">Show Contacts In Search</string>
    <string name="search_contacts_tips">When enabled, search requests Contacts permission and shows contacts in results.</string>
    <string name="backup_restore_item_backup">Back up launcher data</string>
    <string name="backup_restore_item_restore">Restore launcher data</string>
</resources>