<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:setting="http://schemas.android.com/apk/res-auto">
    <com.smartisanos.home.widget.sys.Title android:id="@id/view_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:overScrollMode="always" setting:title_titlex="@string/additional_features_text" />
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/view_title" android:layout_alignParentBottom="true" android:overScrollMode="always">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <include android:id="@+id/item_id_icon_label_size" android:onClick="showIconLabelSizeDialog" layout="@layout/setting_single_defaultsearchengine_text" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_hide_navigation_bar" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/hide_navigation_bar_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/hide_navigation_bar_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_transparent_theme_grid_lines" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/transparent_theme_grid_lines_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/transparent_theme_grid_lines_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_dock_slide_reverse" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/dock_slide_reverse_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/dock_slide_reverse_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_hide_dock_label" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/hide_dock_label_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/hide_dock_label_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_unlock_animation_compat" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/unlock_animation_compat_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/unlock_animation_compat_tips" style="@style/SettingItemTipsStyle" />
            <include android:id="@+id/item_id_swipe_up_action" layout="@layout/setting_single_defaultsearchengine_text" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/swipe_up_action_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_default_t9_keyboard" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/search_default_t9_keyboard_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/search_default_t9_keyboard_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_usage_sort" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/search_usage_sort_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/search_usage_sort_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_recent_apps" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/search_recent_apps_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/search_recent_apps_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_contacts" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/search_contacts_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/search_contacts_tips" style="@style/SettingItemTipsStyle" />
            <RelativeLayout android:orientation="horizontal" android:id="@+id/setting_backup_data" android:background="@drawable/setting_item_up" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" android:onClick="openBackupSettings">
                <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/setting_item_text_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_restore_item_backup" android:layout_centerVertical="true" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/setting_next" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@+id/setting_restore_data" android:background="@drawable/setting_item_down" android:layout_width="match_parent" android:layout_height="wrap_content" android:onClick="openRestoreSettings">
                <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/setting_item_text_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_restore_item_restore" android:layout_centerVertical="true" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/setting_next" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <include layout="@layout/item_bottom_shadow_layout" />
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/view_title" layout="@layout/title_bar_shadow" />
</RelativeLayout>
